<resources>
    <string name="app_name">Tip calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_here">Type here...</string>
    <string name="send">Send</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="amount_of_bill">Amount of bill</string>
    <string name="number_of_people">Number of people</string>
    <string name="tip">Tip (%)</string>
    <string name="tip_value">Tip value</string>
    <string name="to_pay">To pay</string>
    <string name="to_pay_person">To pay for person</string>
    <string name="other">other</string>
</resources>
