<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:background="@color/layout_background"
                tools:context=".MyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_weight="3.5"
                android:text="@string/amount_of_bill"
                style="@style/Label"/>
            <EditText
                android:id="@+id/wysokosc_rachunku_et"
                android:layout_weight="6.5"
                android:numeric="decimal"
                android:hint="@string/type_here"
                style="@style/EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_weight="3.5"
                android:text="@string/number_of_people"
                style="@style/Label"/>
            <EditText
                android:id="@+id/liczba_osob_et"
                android:layout_weight="6.5"
                android:numeric="integer"
                android:hint="@string/type_here"
                style="@style/EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tip_tv"
                android:layout_weight="3.5"
                android:text="@string/tip"
                android:background="@drawable/text_view_background_default_rounded"
                style="@style/Label"/>
            <EditText
                android:layout_weight="6.5"
                android:visibility="invisible"
                android:id="@+id/inny_wybor_et"
                android:hint="@string/type_here"

                android:numeric="decimal"
                style="@style/EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio1"
                        android:text="10"
                        android:onClick="ustalWysokoscNapiwku"
                        android:layout_alignParentLeft="true"
                        style="@style/Radio"/>
                    <RadioButton
                        android:id="@+id/radio2"
                        android:text="15"
                        android:onClick="ustalWysokoscNapiwku"
                        android:layout_centerInParent="true"
                        style="@style/Radio"/>
                    <RadioButton
                        android:id="@+id/radio3"
                        android:text="@string/other"
                        android:onClick="ustalWysokoscNapiwku"
                        android:layout_alignParentRight="true"
                        style="@style/Radio"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_weight="3.5"
                android:text="@string/tip_value"
                style="@style/Label"/>
            <TextView
                android:id="@+id/wysokosc_napiwku_tv"
                android:layout_weight="6.5"
                style="@style/Label2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_weight="3.5"
                android:text="@string/to_pay"
                style="@style/Label"/>
            <TextView
                android:id="@+id/do_zaplaty_tv"
                android:layout_weight="6.5"
                style="@style/Label2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_weight="3.5"
                android:text="@string/to_pay_person"
                style="@style/Label"/>
            <TextView
                android:id="@+id/na_osobe_tv"
                android:layout_weight="6.5"
                style="@style/Label2"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear_bt"
                android:onClick="wyczyscRachunek"
                android:text="@string/clear"
                android:layout_alignParentBottom="true"
                style="@style/Button"/>
            <Button
                android:id="@+id/calculate_bt"
                android:onClick="obliczRachunek"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/calculate"
                style="@style/Button"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
